{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 348,
  "lineage": "36190591-5e5b-e297-0ba8-53456ffd6653",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nuxt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ae3e6717dc99c62b",
            "arn": "arn:aws:ec2:ap-southeast-1:828520398307:instance/i-0130c2fba5da64fb8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "001-instance-profile",
            "id": "i-0130c2fba5da64fb8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-088cfa3489b2b0a41",
            "private_dns": "ip-10-1-0-128.ap-southeast-1.compute.internal",
            "private_ip": "10.1.0.128",
            "public_dns": "ec2-13-228-23-87.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.228.23.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "001-nuxt"
                },
                "throughput": 0,
                "volume_id": "vol-028cb0a30d4156688",
                "volume_size": 12,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041c747244561e85d",
            "tags": {
              "App": "nuxt",
              "Name": "001-nuxt",
              "Tenant": "001"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02493e01a4d365ab1"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_s3_profile",
            "aws_iam_role.ec2_s3_access_role",
            "aws_security_group.my_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.tenant_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pan",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ae3e6717dc99c62b",
            "arn": "arn:aws:ec2:ap-southeast-1:828520398307:instance/i-00d1bd13ec05ce673",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "001-instance-profile",
            "id": "i-00d1bd13ec05ce673",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-093f108132d85f21e",
            "private_dns": "ip-10-1-0-197.ap-southeast-1.compute.internal",
            "private_ip": "10.1.0.197",
            "public_dns": "ec2-54-255-53-74.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.255.53.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "001-pan"
                },
                "throughput": 0,
                "volume_id": "vol-08fbca5c32d12a5f1",
                "volume_size": 12,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041c747244561e85d",
            "tags": {
              "App": "pan",
              "Name": "001-pan",
              "Tenant": "001"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02493e01a4d365ab1"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_s3_profile",
            "aws_iam_role.ec2_s3_access_role",
            "aws_security_group.my_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.tenant_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "saas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ae3e6717dc99c62b",
            "arn": "arn:aws:ec2:ap-southeast-1:828520398307:instance/i-0e4bee663ed96963a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "001-instance-profile",
            "id": "i-0e4bee663ed96963a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e496caa0d6a34b28",
            "private_dns": "ip-10-1-0-34.ap-southeast-1.compute.internal",
            "private_ip": "10.1.0.34",
            "public_dns": "ec2-13-229-226-96.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.226.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "001-saas"
                },
                "throughput": 0,
                "volume_id": "vol-0b25a308d2302da2d",
                "volume_size": 12,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041c747244561e85d",
            "tags": {
              "App": "saas",
              "Name": "001-saas",
              "Tenant": "001"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02493e01a4d365ab1"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_s3_profile",
            "aws_iam_role.ec2_s3_access_role",
            "aws_security_group.my_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.tenant_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tenant_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:828520398307:internet-gateway/igw-00781ab923aab991e",
            "id": "igw-00781ab923aab991e",
            "owner_id": "828520398307",
            "tags": {
              "Name": "001-igw"
            },
            "vpc_id": "vpc-0c0246816943e5291"
          },
          "dependencies": [
            "aws_vpc.tenant_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ee4ba32c89588a0d",
            "owner_id": "828520398307",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00781ab923aab991e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route"
            },
            "vpc_id": "vpc-0c0246816943e5291"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tenant_igw",
            "aws_vpc.tenant_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6c4dff8ef0cad40",
            "route_table_id": "rtb-0ee4ba32c89588a0d",
            "subnet_id": "subnet-041c747244561e85d"
          },
          "dependencies": [
            "aws_internet_gateway.tenant_igw",
            "aws_route_table.public_route",
            "aws_subnet.public_subnet",
            "aws_vpc.tenant_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:828520398307:security-group/sg-02493e01a4d365ab1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-02493e01a4d365ab1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "001-sg",
            "name_prefix": "",
            "owner_id": "828520398307",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c0246816943e5291"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tenant_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:828520398307:subnet/subnet-041c747244561e85d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-041c747244561e85d",
            "map_public_ip_on_launch": true,
            "owner_id": "828520398307",
            "tags": {
              "Name": "001-subnet"
            },
            "vpc_id": "vpc-0c0246816943e5291"
          },
          "dependencies": [
            "aws_vpc.tenant_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tenant_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:828520398307:vpc/vpc-0c0246816943e5291",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08173ac5ff032cdc3",
            "default_route_table_id": "rtb-00d734a2aacf95a8e",
            "default_security_group_id": "sg-0509757f54d6af426",
            "dhcp_options_id": "dopt-d76094b1",
            "enable_classiclink": true,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c0246816943e5291",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00d734a2aacf95a8e",
            "owner_id": "828520398307",
            "tags": {
              "Name": "001-vpc"
            }
          }
        }
      ]
    }
  ]
}